# scrummy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  config.cc  config.hh  config.json  drupalauth.cc  drupalauth.hh  scrumcomps.cc  scrumcomps.hh  scrummer.cc  scrummer.hh  scrummer2.cc  scrummer2.hh  unzip.cc  unzip.hh
cmake/: FindCURLpp.cmake  FindFontConfig.cmake  FindPoco.cmake
test/: unziptest.cc
